Bug 550772 -  fallback pref font handling for CJK fonts is broken r=jdaggett